--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-mobile-btn">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- #endregion Header ==================================================== -->
+
     <!-- #region Main ==================================================== -->
     <main class="main-page">
       <!-- #region Секція Hero ==================================================== -->
