--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <li class="item-list">
               <img
                 src="./images/mark-guerrero.jpg"
+                srcset="./images/mark-guerrero@2x.jpg 2x"
                 alt="Product Designer"
                 width="264"
                 height="260"
@@ -175,6 +176,7 @@
             <li class="item-list">
               <img
                 src="./images/tom-ford.jpg"
+                srcset="./images/tom-ford@2x.jpg 2x"
                 alt="Frontend Developer"
                 width="264"
                 height="260"
@@ -214,6 +216,7 @@
             <li class="item-list">
               <img
                 src="./images/camila-garcia.jpg"
+                srcset="./images/camila-garcia@2x.jpg 2x"
                 alt="Marketing"
                 width="264"
                 height="260"
@@ -253,6 +256,7 @@
             <li class="item-list">
               <img
                 src="./images/daniel-wilson.jpg"
+                srcset="./images/daniel-wilson@2x.jpg 2x"
                 alt="UI Designer"
                 width="264"
                 height="260"
@@ -300,13 +304,34 @@
           <ul class="section-list">
             <li class="item-list">
               <div class="img-portfolio">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                  class="img-item-list"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/banking-app-desktop.jpg    1x,
+                      ./images/banking-app-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/banking-app-tablet.jpg    1x,
+                      ./images/banking-app-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/banking-app-mobile.jpg    1x,
+                      ./images/banking-app-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="Banking App"
+                    class="img-item-list"
+                  />
+                </picture>
                 <p class="our-app-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -320,13 +345,34 @@
             </li>
             <li class="item-list">
               <div class="img-portfolio">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                  class="img-item-list"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/cashless-payment-desktop.jpg    1x,
+                      ./images/cashless-payment-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/cashless-payment-tablet.jpg    1x,
+                      ./images/cashless-payment-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/cashless-payment-mobile.jpg    1x,
+                      ./images/cashless-payment-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/cashless-payment.jpg"
+                    alt="Cashless Payment"
+                    class="img-item-list"
+                  />
+                </picture>
                 <p class="our-app-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -340,13 +386,34 @@
             </li>
             <li class="item-list">
               <div class="img-portfolio">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                  class="img-item-list"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/meditation-app-desktop.jpg    1x,
+                      ./images/meditation-app-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/meditation-app-tablet.jpg    1x,
+                      ./images/meditation-app-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/meditation-app-mobile.jpg    1x,
+                      ./images/meditation-app-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/meditation-app.jpg"
+                    alt="Meditation App"
+                    class="img-item-list"
+                  />
+                </picture>
                 <p class="our-app-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -360,13 +427,34 @@
             </li>
             <li class="item-list">
               <div class="img-portfolio">
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                  class="img-item-list"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/taxi-service-desktop.jpg    1x,
+                      ./images/taxi-service-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/taxi-service-tablet.jpg    1x,
+                      ./images/taxi-service-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/taxi-service-mobile.jpg    1x,
+                      ./images/taxi-service-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/taxi-service.jpg"
+                    alt="Taxi Service"
+                    class="img-item-list"
+                  />
+                </picture>
                 <p class="our-app-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -375,18 +463,40 @@
               </div>
               <div class="container-portfolio">
                 <h3 class="title-list">Taxi Service</h3>
+
                 <p class="text-list">Marketing</p>
               </div>
             </li>
             <li class="item-list">
               <div class="img-portfolio">
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                  class="img-item-list"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/screen-illustrations-desktop.jpg    1x,
+                      ./images/screen-illustrations-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/screen-illustrations-tablet.jpg    1x,
+                      ./images/screen-illustrations-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/screen-illustrations-mobile.jpg    1x,
+                      ./images/screen-illustrations-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/screen-illustrations.jpg"
+                    alt="Screen Illustrations"
+                    class="img-item-list"
+                  />
+                </picture>
                 <p class="our-app-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -400,13 +510,34 @@
             </li>
             <li class="item-list">
               <div class="img-portfolio">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                  class="img-item-list"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/online-courses-desktop.jpg    1x,
+                      ./images/online-courses-desktop@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/online-courses-tablet.jpg    1x,
+                      ./images/online-courses-tablet@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width: 767px)"
+                    srcset="
+                      ./images/online-courses-mobile.jpg    1x,
+                      ./images/online-courses-mobile@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="Online Courses"
+                    class="img-item-list"
+                  />
+                </picture>
                 <p class="our-app-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -563,8 +694,10 @@
               ><span class="custom-checkbox-privacy-policy"
                 ><svg class="checkbox-icons" width="10" height="8">
                   <use href="./images/icons.svg#checkbox"></use></svg></span
-              >I accept the terms and conditions of the
-              <a href="#" class="privacy-policy-link">Privacy Policy</a></label
+              ><span class="modal-flex-pp"
+                >I accept the terms and conditions of the
+                <a href="#" class="privacy-policy-link">Privacy Policy</a></span
+              ></label
             >
           </div>
           <button type="submit" class="btn-modal-send">Send</button>
@@ -572,6 +705,75 @@
       </div>
     </div>
     <!-- #endregion Modal ==================================================== -->
+
+    <!-- #region MobMenu ==================================================== -->
+    <div class="mobile-menu">
+      <div class="container container-mob-menu">
+        <button class="mobile-close-btn" type="button">
+          <svg class="close-icon-mob" width="8" height="8">
+            <use href="./images/icons.svg#close"></use>
+          </svg>
+        </button>
+        <nav class="nav-mob-menu">
+          <ul class="list-mob-menu">
+            <li class="item-mob-menu">
+              <a href="" class="mob-menu-link mob-extra">Studio</a>
+            </li>
+            <li class="item-mob-menu">
+              <a href="" class="mob-menu-link">Portfolio</a>
+            </li>
+            <li class="item-mob-menu">
+              <a href="" class="mob-menu-link">Contacts</a>
+            </li>
+          </ul>
+          <address class="mob-menu-adr">
+            <ul class="mob-menu-adr-list">
+              <li class="item-mob-menu-adr-list">
+                <a
+                  href="tel:+110001111111"
+                  class="item-mob-menu-adr-link mob-extra"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li class="item-mob-menu-adr-list">
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="item-mob-menu-adr-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+        </nav>
+        <ul class="social-mob-menu-icons-list">
+          <li class="social-mob-menu-icons-item">
+            <a href="#" class="social-mob-menu-icons-link"
+              ><svg class="social-mob-menu-icons" width="24" height="24">
+                <use href="./images/icons.svg#instagram"></use></svg
+            ></a>
+          </li>
+          <li class="social-mob-menu-icons-item">
+            <a href="#" class="social-mob-menu-icons-link"
+              ><svg class="social-mob-menu-icons" width="24" height="24">
+                <use href="./images/icons.svg#twitter"></use></svg
+            ></a>
+          </li>
+          <li class="social-mob-menu-icons-item">
+            <a href="#" class="social-mob-menu-icons-link"
+              ><svg class="social-mob-menu-icons" width="24" height="24">
+                <use href="./images/icons.svg#facebook"></use></svg
+            ></a>
+          </li>
+          <li class="social-mob-menu-icons-item">
+            <a href="#" class="social-mob-menu-icons-link"
+              ><svg class="social-mob-menu-icons" width="24" height="24">
+                <use href="./images/icons.svg#linkedin"></use></svg
+            ></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- #endregion MobMenu ==================================================== -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
