--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
     <!-- #endregion Modal ==================================================== -->
 
     <!-- #region MobMenu ==================================================== -->
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
       <div class="container container-mob-menu">
         <button class="mobile-close-btn" type="button">
           <svg class="close-icon-mob" width="8" height="8">
