--- a/index.html
+++ b/index.html
@@ -726,25 +726,23 @@
               <a href="" class="mob-menu-link">Contacts</a>
             </li>
           </ul>
-          <address class="mob-menu-adr">
-            <ul class="mob-menu-adr-list">
-              <li class="item-mob-menu-adr-list">
-                <a
-                  href="tel:+110001111111"
-                  class="item-mob-menu-adr-link mob-extra"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-              <li class="item-mob-menu-adr-list">
-                <a
-                  href="mailto:info@devstudio.com"
-                  class="item-mob-menu-adr-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
-          </address>
         </nav>
+        <address class="mob-menu-adr">
+          <ul class="mob-menu-adr-list">
+            <li class="item-mob-menu-adr-list">
+              <a
+                href="tel:+110001111111"
+                class="item-mob-menu-adr-link mob-extra"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="item-mob-menu-adr-list">
+              <a href="mailto:info@devstudio.com" class="item-mob-menu-adr-link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
         <ul class="social-mob-menu-icons-list">
           <li class="social-mob-menu-icons-item">
             <a href="#" class="social-mob-menu-icons-link"
